<resources>
    <string name="app_name" translatable="false">Client - DietManager</string>
    <string name="facebook_app_id" translatable="false">3378872082173952</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3378872082173952</string>
    <string name="google_client_id" translatable="false">236334629405-ptkugsh78ti2a9hj3lhtcolhn5te86an.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="email_address" translatable="false">Email Address</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="confirm">Confirm</string>
    <string name="password">Password</string>
    <string name="register_this_account">"Don't have an account?"</string>
    <string name="let_impress_you">"Let's impress you with our dishes"</string>
    <string name="hundred_restaurant">"100 Kitchens"</string>
    <string name="your_favourites">Your Favourites</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="delivery_amount_free">Free</string>
    <string name="discover">"Discover"</string>
    <string name="otp">Otp</string>
    <string name="eta">ETA</string>
    <string name="call">Call</string>
    <string name="offers_near_you">"Offers Near You"</string>
    <string name="filter">Filter</string>
    <string name="offers">Offers</string>
    <string name="just_for_you">Just for you</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="manage_address">Manage Address</string>
    <string name="payment">Payment</string>
    <string name="add_new_card">Add New Card</string>
    <string name="set_delivery_location">Set Delivery Location</string>
    <string name="search_place">"Search for area, street name…"</string>
    <string name="change_password">"Change Password"</string>
    <string name="favourites">"Favourites"</string>
    <string name="filters">"Filters"</string>
    <string name="reset">"Reset"</string>
    <string name="edit_account">"Edit Account"</string>
    <string name="address">"Address"</string>
    <string name="restaurant">"Sangeetha"</string>
    <string name="current_location">"Current Location"</string>
    <string name="dish">"Dish"</string>
    <string name="home">"Home"</string>
    <string name="work">"Work"</string>
    <string name="other">"Other"</string>
    <string name="save">"Save"</string>
    <string name="save_proceed">Save And Proceed</string>
    <string name="saved_addresses">"Saved Addresses"</string>
    <string name="edit">"Edit"</string>
    <string name="delete">"Delete"</string>
    <string name="delete_confirm">"Do you really want to delete?"</string>
    <string name="orders">"Orders"</string>
    <string name="apply_filter">"Apply Filter"</string>
    <string name="view_results">View Results"</string>
    <string name="address_line_1">"Address Line 1"</string>
    <string name="address_line_2">"Number"</string>
    <string name="address_line_3">"Street"</string>
    <string name="large_text">
        "Material is the metaphor.\n"
        
        
        "seams, divides space, and indicates moving parts."
    </string>
    <string name="getting_address">"Getting Address"</string>
    <string name="fresh">F r e s h</string>
    <string name="fresh_description">Discover new dishes everyday and hold your favourite kitchen</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="search">Search</string>
    <string name="search_description">View menus, photos and reviews for kitchens around you</string>
    <string name="bookmark">B o o k m a r k</string>
    <string name="bookmark_description">Add places you want to visit in the future to your bookmark</string>
    <string name="already_you_have_account">Already you have an account?</string>
    <string name="register_using">Register using</string>
    <string name="signin_here">SIGN IN here</string>
    <string name="next">Next</string>
    <string name="verification_code_txt">Enter Verification Code</string>
    <string name="continue_txt">Continue</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="change">Change</string>
    <string name="register">Register</string>
    <string name="cart_error_title">Delicious Food is Getting Cooked</string>
    <string name="cart_error_description">Please order something amazing</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="add_address">Add Address</string>
    <string name="change_address">Change Address</string>
    <string name="old_password">Old Password</string>
    <string name="select_address">Select Address</string>
    <string name="submit">Submit</string>
    <string name="enter_secret_key">Enter your secret key</string>
    <string name="account">Account</string>
    <string name="login_or_sign_up_to_place_order">Login or Signup to place your order</string>
    <string name="please_login_and_order_dishes">Please login and order something amazing</string>
    <string name="manage_address_error_title">Knock Knock ! Who\'s there ?</string>
    <string name="manage_address_error_description">Saving address helps you check out faster</string>
    <string name="order_placed">Order Placed</string>
    <string name="order_scheduled">Order Scheduled</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="order_pickedup">Order Pickedup</string>
    <string name="order_delivered">Order Delivered</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="order_placed_new">Order Received</string>
    <string name="order_scheduled_new">Order Scheduled</string>
    <string name="order_confirmed_new">Order Accepted</string>
    <string name="order_processed_new">Being Prepared</string>
    <string name="order_pickedup_new">Ready for Pickup</string>
    <string name="order_delivered_new">Arrived</string>
    <string name="order_cancelled_new">Order Cancelled</string>
    <string name="pickup_order_received">Order Placed</string>
    <string name="pickup_order_accepted">Order Accepted</string>
    <string name="order_accepted_arriving">Chef Arriving</string>
    <string name="order_accepted_arrived">Chef Arrived</string>
    <string name="pickup_order_processed_new">Being Prepared</string>
    <string name="pickup_order_processed">Your food Prepared</string>
    <string name="pickup_order_pickedup_new">Ready for Pickup</string>
    <string name="pickup_order_completed">Completed</string>
    <string name="pickup_description_1">Your order has been Placed</string>
    <string name="pickup_description_2">Your order has been confirmed.</string>
    <string name="arrived_description_2">Your Chef is on the way to your location.</string>
    <string name="pickup_description_3">Your order is being prepared in your kitchen.</string>
    <string name="arrived_description_3">Your Chef is Arrived to your location.</string>
    <string name="pickup_description_4">Your order is ready for pickup by delivery boy.</string>
    <string name="prepared_description_4">Your order is ready to serve.</string>
    <string name="pickup_description_5">Your order has been successfully completed</string>
    <string name="delivery_order_received">Order Received</string>
    <string name="delivery_order_accepted">Order Accepted</string>
    <string name="delivery_order_processed_new">Being Prepared</string>
    <string name="delivery_order_pickedup_new">Ready for Pickup</string>
    <string name="delivery_order_arrived">Arrived</string>
    <string name="delivery_description_1">Your order has been received</string>
    <string name="delivery_description_2">Your order has been confirmed by kitchen</string>
    <string name="delivery_description_3">Your order is being prepared by kitchen</string>
    <string name="delivery_description_4">Your order is ready for pickup by delivery boy</string>
    <string name="delivery_description_5">Your order has arrived successfully</string>
    <string name="description_1">Your order has been received</string>
    <string name="description_2">Your order has been confirmed by kitchen.</string>
    <string name="description_3">Your order is being prepared by kitchen</string>
    <string name="description_4">Your order is ready for pickup</string>
    <string name="description_5">Your order has arrived successfully.</string>
    <string name="description_1_new">Your order has been received.</string>
    <string name="description_2_new">Your order has been confirmed by kitchen.</string>
    <string name="description_3_new">Your order is being prepared by kitchen.</string>
    <string name="description_4_new">Your order is ready for pickup.</string>
    <string name="description_5_new">Your order has been successfully completed.</string>
    <string name="order_delivered_successfully">Order Delivered Successfully</string>
    <string name="order_delivered_successfully_on">Order Delivered Successfully on </string>
    <string name="address_hint">Ex : Dad\'s place, John\'s Home</string>
    <string name="cancel">Cancel</string>
    <string name="setting">Setting</string>
    <string name="wallet_amount">DietManager Credit Amount</string>
    <string name="card">CARD</string>
    <string name="pay_on_delivery">PAY ON DELIVERY</string>
    <string name="by_cash">By cash</string>
    <string name="walletHistory">DietManager Credit</string>
    <string name="history">History</string>
    <string name="add">Add</string>
    <string name="payment_options">Payment options</string>
    <string name="promotion_details">Promotion details</string>
    <string name="add_money">Add amount</string>
    <string name="enter_the_amount">Enter the amount</string>
    <string name="pay">pay</string>
    <string name="promo_apply_text">Apply promo code to avail exciting offers</string>
    <string name="apply">Apply</string>
    <string name="promocode">Promo Code</string>
    <string name="promo_expires_on">Expires on : </string>
    <string name="use_wallet">DietManager Credit</string>
    <string name="is_wallet">Use Wallet</string>
    <string name="google_login_failed">Google login failed</string>
    <string name="dispute">Dispute</string>
    <string name="email_us">Email Us</string>
    <string name="canelled">Canelled</string>
    <string name="oops_connect_your_internet">Oops ! Connect your Internet.</string>
    <string name="add_special_instructions">Add special instruction</string>
    <string name="choose_a_date">Choose a date</string>
    <string name="choose_a_time">Choose a time</string>
    <string name="schedule_a_ride">Schedule Order</string>
    <string name="save_delivery_location">Save delivery location</string>
    <string name="save_as">Save As</string>
    <string name="skip">Skip</string>
    <string name="enter_your_notes">Enter your notes.</string>
    <string name="user_name">User Name</string>
    <string name="welcome_user">Hi,</string>
    <string name="set_location1">Experience a wide range of healthy meals prepared fresh for you.</string>
    <string name="set_location2">Set your location to start exploring specialist kitchens around you</string>
    <string name="use_current_location">Use current location</string>
    <string name="set_location_manually">or set location manually</string>
    <string name="done">Done</string>
    <string name="schedule">Schedule</string>
    <string name="asap">ASAP</string>
    <string name="delivery_content">For Self Pickup, No delivery charge</string>
</resources>