<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_close_black"/>

    <TextView
        android:id="@+id/txt_delivery_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_width="wrap_content"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:visibility="gone"
        android:textSize="16sp"
        android:text="@string/delivery_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:id="@+id/layout_order_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:visibility="visible">

        <Button
            android:id="@+id/schedule_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/schedule"
            android:textColor="@color/colorTextWhite" />


        <Button
            android:id="@+id/asap_btn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/asap"
            android:textColor="@color/colorTextWhite"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/schedule_a_ride"
            android:textColor="@color/colorPrimaryText" />

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/choose_a_date"
            android:padding="12dp"
            android:maxLines="1"
            android:textColor="@color/colorSecondaryText"
             />

        <TextView
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/choose_a_time"
            android:padding="12dp"
            android:maxLines="1"
            android:textColor="@color/colorSecondaryText"
            />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonStyle"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/done" />

    </LinearLayout>
</LinearLayout>