<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    app:behavior_hideable="false"
    app:behavior_peekHeight="170dp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/animation_line_cart_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/save_delivery_location"
                android:textColor="@color/colorTextBlack"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/skip_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.5"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="end"
                android:text="@string/skip"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="@dimen/text_small" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/address_line_1"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text=""
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_medium" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/flat_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/address_line_2"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_medium" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/landmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/address_line_3"
                    android:imeOptions="actionDone"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/text_medium" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/nunito_semibold"
            android:text="@string/save_as"
            android:textAllCaps="true"
            android:textSize="@dimen/text_tiny" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginTop="@dimen/activity_vertical_margin_half"
            android:layout_marginBottom="@dimen/activity_vertical_margin_half"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/type_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <RadioButton
                    android:id="@+id/home_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableStart="@drawable/home_selector"
                    android:fontFamily="@font/nunito_semibold"
                    android:gravity="center"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/home"
                    android:textAllCaps="true"
                    android:textColor="@color/item_tint_selector" />

                <RadioButton
                    android:id="@+id/work_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableStart="@drawable/work_selector"
                    android:fontFamily="@font/nunito_semibold"
                    android:gravity="center"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/work"
                    android:textAllCaps="true"
                    android:textColor="@color/item_tint_selector" />

                <RadioButton
                    android:id="@+id/other_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableStart="@drawable/other_selector"
                    android:fontFamily="@font/nunito_semibold"
                    android:gravity="center"
                    android:padding="@dimen/_12sdp"
                    android:text="@string/other"
                    android:textAllCaps="true"
                    android:textColor="@color/item_tint_selector" />

            </RadioGroup>

            <RelativeLayout
                android:id="@+id/other_address_title_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/_5sdp">

                <EditText
                    android:id="@+id/other_address_header_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:hint="@string/address_hint"
                    android:inputType="text"
                    android:textColor="@color/colorPrimaryText" />

                <TextView
                    android:id="@+id/cancel_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/cancel"
                    android:textColor="@color/colorSecondaryText" />

            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/save"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/save_proceed"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

    </LinearLayout>
</androidx.cardview.widget.CardView>