<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_bold"
        android:padding="@dimen/activity_vertical_margin_half"
        android:text="@string/add_special_instructions"
        android:textColor="@color/colorPink"
        android:textSize="@dimen/text_medium"
        tools:ignore="MissingPrefix" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:background="#EEE"
        android:fontFamily="@font/nunito_regular"
        android:gravity="start"
        android:hint="@string/enter_your_notes"
        android:inputType="textMultiLine"
        android:lines="4"
        android:padding="@dimen/activity_vertical_margin_half"
        android:textSize="@dimen/text_small" />

    <Button
        android:id="@+id/custom_note_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPink"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/submit"
        android:textColor="@color/colorWhite" />

</LinearLayout>