<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:scaleType="fitStart"
        android:src="@drawable/ic_banner_location" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/nunito_bold"
        android:paddingTop="10dp"
        android:text="@string/welcome_user"
        android:textColor="@color/colorPrimaryText"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_set_location1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:text="@string/set_location1"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_set_location2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_set_location1"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/nunito_regular"
        android:gravity="center"
        android:text="@string/set_location2"
        android:textColor="@color/colorSecondaryText"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/ll_use_current_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_set_location_manually"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_curved"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:padding="10dp">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_location" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:includeFontPadding="false"
            android:text="@string/use_current_location"
            android:textColor="@color/colorWhite"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_set_location_manually"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/nunito_regular"
        android:padding="5dp"
        android:text="@string/set_location_manually"
        android:textColor="@color/colorPink"
        android:textSize="14sp" />
</RelativeLayout>